--- a/package.json
+++ b/package.json
@@ -94,5 +94,8 @@
         "tsx": "^4.19.4",
         "tw-animate-css": "^1.3.6",
         "typescript": "^5"
+    },
+    "optionalDependencies": {
+        "bufferutil": "^4.0.9"
     }
 }
