--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
         "@trpc/client": "^11.1.2",
         "@trpc/server": "^11.1.2",
         "@trpc/tanstack-react-query": "^11.1.2",
+        "@types/react-highlight-words": "^0.20.0",
         "better-auth": "^1.2.8",
         "class-variance-authority": "^0.7.1",
         "client-only": "^0.0.1",
@@ -73,6 +74,7 @@
         "react-day-picker": "^9.8.1",
         "react-dom": "^19.0.0",
         "react-error-boundary": "^6.0.0",
+        "react-highlight-words": "^0.21.0",
         "react-hook-form": "^7.61.1",
         "react-icons": "^5.5.0",
         "react-markdown": "^10.1.0",
