--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "lint": "next lint",
         "db:push": "drizzle-kit push",
         "db:studio": "drizzle-kit studio",
-        "dev:webhook": "ngrok http --url=improved-humpback-clever.ngrok-free.app 3000"
+        "dev:webhook": "ngrok http --url=improved-humpback-clever.ngrok-free.app 3000",
+        "dev:inngest": "npx inngest-cli@latest dev"
     },
     "dependencies": {
         "@dicebear/collection": "^9.2.3",
