--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "next": "15.3.2",
         "next-themes": "^0.4.6",
         "nuqs": "^2.4.3",
+        "openai": "^5.12.2",
         "react": "^19.0.0",
         "react-day-picker": "^9.8.1",
         "react-dom": "^19.0.0",
@@ -84,6 +85,7 @@
         "server-only": "^0.0.1",
         "sonner": "^2.0.6",
         "stream-chat": "^9.15.0",
+        "stream-chat-react": "^13.3.0",
         "tailwind-merge": "^3.3.1",
         "vaul": "^1.1.2",
         "zod": "^3.25.7"
